--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 							<h4 class="card-title">Cartão de Visitas</h4>
 							<p>Quarto projeto com HTML e CSS, desenvolvido no curso Do Zero ao primeiro Site, ofertado pelo grupo +praTi. Utilizei transição de objeto personalizado </p>
 							<div class="text-center">
-								<a href="portfolio/Cartao/cartao.html" class="btn btn-danger" target="_blank">Acesse aqui</a>
+								<a href="portfolio/cartao/cartao.html" class="btn btn-danger" target="_blank">Acesse aqui</a>
 							</div>
 						</div>
 					</div>
