add estante correta

--- a/portfolio/estante/estante.html
+++ b/portfolio/estante/estante.html
@@ -3,71 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Estante Virtual</title>
-	<style type="text/css">
-		
-		table{
-			width: 100%;
-		}
-		td{
-			background-color: #A9D9D0;
-		}
-		tr{
-			background-color: #038C7F;
-		}
-		p {
-			text-align: justify;
-			text-indent: 50px;
-			font-family: cursive;
-		}
-		a {
-			color: #F2E7DC;
-		}
-		img {
-			width: 300px;
+	</head>
 
-		}
-		span{
-			color: red;
-		}
-
-		.titulo{
-			font-family: sans-serif;
-			background-color: #a9d9d0;
-			color: #027373;
-			text-align: center;
-		}
-		.subtitulo{
-			font-family: cursive;
-			background-color: #a9d9d0;
-			color: #027373;
-			text-align: center;
-		}
-		
-		.body{
-			background-color:#038C7F;
-		}
-		#l1, #l2, #l3, #l4, #l5 {
-			background-color: #CCE2E4;
-		}
-		#sumario{
-			font-family: cursive;
-			background-color: #a9d9d0;
-			color: #027373;
-			text-align: center;
-		}
-
-
-	</style>
-</head>
-<body class="body">
-	<div>
-		<h1 class = "titulo">Estante de Livros</h1>
-		<h4 class = "subtitulo"><i>Sua biblioteca à um clique de distância!</i></h4>
+<body>
+	<div id = "topo">
+		<h1 >Estante de Livros</h1>
+		<h4 ><i>Sua biblioteca à um clique de distância!</i></h4>
 	</div>
-
-	<div >
-		<h2 id="sumario"><strong>Sumário:</strong></h2>
+	<div>
+	</div>
+	<div id="sumario" >
+		<h2 ><strong>Sumário:</strong></h2>
 
 		<ol>
 			<li><strong><a href="#l1">A Casa da Floresta</a></strong> 							</li>
@@ -80,11 +28,11 @@
 
 
 	<section id="l1">
-		<h3 class="titulo"> A Casa da Floresta</h3>
+		<h3> A Casa da Floresta</h3>
 
 		<img src="img/aCasaDaFlorestaCapa.jpg">
 
-		<h3 class="titulo">Sinopse</h3>
+		<h3>Sinopse</h3>
 
 		<p><em>As origens de Avalon reveladas em mais um best-seller de Marion Zimmer Bradley As brumas de Avalon, clássica releitura do mito arturiano sob a perspectiva feminina, é a obra-prima da autora Marion Zimmer Bradley. Ao longo dos anos após a escrita do primeiro volume, Bradley se dedicou aos demais romances do chamado Ciclo de Avalon, do qual A Casa da Floresta foi o segundo título a ser publicado. Nos primeiros anos do Império Romano nos territórios da Britânia, os druidas e sua religião seguem duramente massacrados e perseguidos pelas legiões de César. Após a destruição da Casa das Mulheres na sagrada ilha de Mona, as sacerdotisas, que juraram proteger os ritos ancestrais de sabedoria, cura e magia consagrados à Deusa, buscam refúgio em um novo santuário: a Casa da Floresta. Mas o amor não obedece às leis dos homens, e Eilan, futura grã-sacerdotisa, se apaixona por um oficial do exército romano. E no coração desse romance proibido, entre o chamado e a paixão, entre a delicadeza do cisne e a força da águia, está a história da formação da lendária ilha de Avalon. "Bradley faz um trabalho de mestre ao recriar os sabores de uma época e de duas culturas tão distintas, sempre com protagonistas femininas fortes. [...] O amor proibido entre uma sacerdotisa e um soldado romano funciona como espelho do choque entre culturas na Britânia romana."</em></p>
 		<p><strong>Fonte:</strong><em> Google Books</em></p>
@@ -107,12 +55,15 @@
 
 	</section>
 
+	<div>
+	</div>
+
 	<section id="l2" >
-		<h3 class="titulo"> O Senhor dos Anéis: A Sociedade do Anel</h3>
+		<h3> O Senhor dos Anéis: A Sociedade do Anel</h3>
 
 		<img src="img/oSenhorDosAneisASociedadeDoAnel.jpg">
 
-		<h3 class="titulo">Sinopse</h3>
+		<h3>Sinopse</h3>
 
 		<p><em>"O volume inicial de O Senhor dos Anéis, lançado originalmente em julho de 1954, foi o primeiro grande épico de fantasia moderno, conquistando milhões de leitores e se tornando o padrão de referência para todas as outras obras do gênero até hoje. A imaginação prodigiosa de J.R.R. Tolkien e seu conhecimento profundo das antigas mitologias da Europa permitiram que ele criasse um universo tão complexo e convincente quanto o mundo real. A Sociedade do Anel começa no Condado, a região rural do oeste da Terra-média onde vivem os diminutos e pacatos hobbits. Bilbo Bolseiro, um dos raros aventureiros desse povo, cujas peripécias foram contadas em O Hobbit, resolve ir embora do Condado e deixa sua considerável herança nas mãos de seu jovem parente Frodo. O mais importante legado de Bilbo é o anel mágico que costumava usar para se tornar invisível. No entanto, o mago Gandalf, companheiro de aventuras do velho hobbit, revela a Frodo que o objeto é o Um Anel, a raiz do poder demoníaco de Sauron, o Senhor Sombrio, que deseja escravizar todos os povos da Terra-média. A única maneira de eliminar a ameaça de Sauron é destruir o Um Anel nas entranhas da própria montanha de fogo onde foi forjado. A revelação faz com que Frodo e seus companheiros hobbits Sam, Merry e Pippin deixem a segurança do Condado e iniciem uma perigosa jornada rumo ao leste. Ao lado de representantes dos outros Povos Livres que resistem ao Senhor Sombrio, eles formam a Sociedade do Anel."
 		</em></p>
@@ -134,6 +85,7 @@
 		</table>
 		<h4><a href="#sumario"><span>Voltar para o sumário.</span></a></h4>		
 	</section>
+	<div></div>
 
 	<section id="l4">
 		<h3 class="titulo"> O Jardim dos Esquecidos</h3>
@@ -165,13 +117,15 @@
 		</table>
 		<h4><a href="#sumario"><span>Voltar para o sumário.</span></a></h4>		
 	</section>
+	<div>
+	</div>
 
 	<section id="l5">
-		<h3 class="titulo"> Doutor Sono </h3>
+		<h3> Doutor Sono </h3>
 
 		<img src="img/doutorSono.jpg">
 
-		<h3 class="titulo">Sinopse</h3>
+		<h3>Sinopse</h3>
 
 		<p><em>Na infância, Danny Torrance sobreviveu a uma tentativa de homicídio por parte do pai, um escritor perturbado pelos espíritos malignos do Hotel Overlook. Já adulto, traumatizado e alcoólatra. Danny se estabelece em uma pequena cidade, onde consegue um emprego no hospital local. Sua paz, porém, está com os dias contados a partir de quando cria um vínculo telepático com Abra, uma menina com poderes tão fortes quanto aqueles que ele bloqueia dentro de si." </em></p>
 		<p><strong>Fonte:</strong><em> Google Books</em></p>
@@ -192,13 +146,15 @@
 		</table>
 		<h4><a href="#sumario"><span>Voltar para o sumário.</span></a></h4>	
 	</section>
+	<div>
+	</div>
 
 	<section id="l5">
-		<h3 class="titulo"> O Aliciador </h3>
+		<h3> O Aliciador </h3>
 
 		<img src="img/oAliciador.jpg">
 
-		<h3 class="titulo">Sinopse</h3>
+		<h3>Sinopse</h3>
 
 		<p><em>Em seu romance de estréia, o escritor italiano Donato Carrisi surpreendeu e arrebatou a crítica e o público ao embrenhar-se por um gênero até então fortemente atribuído aos grandes escritores americanos. Presente nas listas de best sellers dos principais jornais da Itália logo em seu lançamento, com mais de 180 mil exemplares vendidos e publicado em nove países, O aliciador é mais que um thriller de um autor estreante que reinventa as regras do jogo: é uma história que não dá trégua, que explora a zona nebulosa entre o bem e o mal até descobrir seu último segredo, seu menor sussurro. O criminologista Goran Gavila e a equipe de homicídios enfrentam um caso perturbador, que exige toda a habilidade dos policiais do Esquadrão Especial: seis braços direitos são desenterrados em um bosque, cinco meninas entre 9 e 13 anos estão desaparecidas. Liderada por Gavila e pelo Capitão Roche, a equipe segue as pistas do caso e, um a um, os corpos das garotinhas emergem,deixando evidente que o culpado é um serial killer cuja frieza e ferocidade não têm limites. As esperanças de que uma sexta menina esteja viva provocam uma corrida contra o tempo, mas as pistas, em vez de levarem a equipe ao culpado, revelam-se parte de um plano friamente arquitetado pela mente cruel e brilhante do assassino, que parece estar sempre um passo à frente. Em cada cena de crime, novas evidências levam os detetives a acreditar que não se trata de apenas um, mas de vários assassinos, agindo em conjunto. É quando se junta a eles a investigadora Mila Vasquez, especialista em casos de sequestro.Aos poucos a polícia descobre que seu alvo é capaz de assumir as aparências mais variadas, colocando-os à prova incessantemente. Nesse caso, cada vez que o mal vem à luz, traz consigo um agouro, obrigando os detetives a enfrentar sobretudo a escuridão que carregam dentro de si. A investigação se transforma em um jogo de pesadelos habilmente velados, um desafio contínuo.</em></p>
 		<p><strong>Fonte:</strong><em> Google Books</em></p>
@@ -219,6 +175,8 @@
 		</table>
 	<h4><a href="#sumario"><span>Voltar para o sumário.</span></a></h4>		
 	</section>
+	<div>
+	</div>
 
 </body>
 </html>
